[[example]]
name = 'dialect'

[[bin]]
name = 'hello'
path = 'bin/hello/main.rs'

[package]
name = 'queryer'
version = '0.1.0'
edition = '2021'

[dependencies]
anyhow = '1'
async-trait = '0.1'
sqlparser = '0.27'
tracing = '0.1'

[dependencies.polars]
version = '0.25'
features = [
    'json',
    'lazy',
]

[dependencies.reqwest]
version = '0.11'
default-features = false
features = ['rustls-tls']

[dependencies.tokio]
version = '1'
features = ['fs']

[dev-dependencies]
tracing-subscriber = '0.3'

[dev-dependencies.tokio]
version = '1'
features = ['full']
