[package]
name = 'rgrep'
authors = ['thinkgo thinkgo@aliyun.com']
version = '0.1.0'
edition = '2021'
license = 'MIT'

[dependencies]
thiserror = '1.0'
anyhow = '1.0'
glob = '0.3'
colored = '2'
itertools = '0.10'
rayon = '1'
regex = '1'

[dependencies.clap]
version = '4'
features = ['derive']

[dependencies.tokio]
version = '1'
features = ['full']
