[package]
name = 'thumbor'
version = '0.1.0'
edition = '2021'

[dependencies]
axum = '0.2'
anyhow = '1'
base64 = '0.13'
bytes = '1'
image = '0.23'
lazy_static = '1'
lru = '0.6'
percent-encoding = '2'
photon-rs = '0.3'
prost = '0.8'
reqwest = '0.11'
tracing = '0.1'
tracing-subscriber = '0.2'

[dependencies.serde]
version = '1'
features = ['derive']

[dependencies.tokio]
version = '1'
features = ['full']

[dependencies.tower]
version = '0.4'
features = [
    'util',
    'timeout',
    'load-shed',
    'limit',
]

[dependencies.tower-http]
version = '0.1'
features = [
    'add-extension',
    'compression-full',
    'trace',
]

[build-dependencies]
prost-build = '0.8'
